--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
+# Build Folder
 /build/
 
-# macOS system files
+# System Files
 .DS_Store
-.AppleDouble
-.LSOverride
 
-# Windows system files
-Thumbs.db
-ehthumbs.db
-desktop.ini
-
-# IDE and editor settings
+# Editor Settings
 .vscode/
