Define NODEBUG in release builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ if(CMAKE_BUILD_TYPE MATCHES Debug)
     add_link_options(-fsanitize=address)
 elseif(CMAKE_BUILD_TYPE MATCHES Release)
     add_compile_options(-O3)
+    add_compile_definitions(PRIVATE NODEBUG=1)
 elseif(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
     add_compile_options(-O2 -g)
 endif()
