--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,26 @@
-[Window][Debug##Default]
-ViewportPos=2419,249
-ViewportId=0x16723995
-Size=410,565
+[Window][DockSpace]
+Pos=0,0
+Size=1200,600
 Collapsed=0
+
+[Window][Debug##Default]
+Pos=340,75
+Size=400,400
+Collapsed=0
+
+[Window][Statistics]
+Pos=1001,36
+Size=183,136
+Collapsed=0
+
+[Window][Scene Control]
+Pos=0,19
+Size=253,581
+Collapsed=0
+DockId=0x00000001,0
+
+[Docking][Data]
+DockSpace   ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,19 Size=1200,581 Split=X
+  DockNode  ID=0x00000001 Parent=0x21C5FBB2 SizeRef=253,581 Selected=0xB5C6F47E
+  DockNode  ID=0x00000002 Parent=0x21C5FBB2 SizeRef=946,581 CentralNode=1
 
