--- a/imgui.ini
+++ b/imgui.ini
@@ -9,18 +9,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=995,35
-Size=183,136
+Pos=0,19
+Size=300,581
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Scene Control]
 Pos=0,19
-Size=272,581
+Size=300,271
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
+
+[Window][Viewport]
+Pos=455,126
+Size=578,363
+Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,19 Size=1200,581 Split=X
-  DockNode  ID=0x00000001 Parent=0x21C5FBB2 SizeRef=272,581 Selected=0xB5C6F47E
-  DockNode  ID=0x00000002 Parent=0x21C5FBB2 SizeRef=927,581 CentralNode=1
+DockSpace     ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,19 Size=1200,581 Split=X
+  DockNode    ID=0x00000003 Parent=0x21C5FBB2 SizeRef=300,581 Split=Y Selected=0x553E127E
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=428,271 Selected=0xB5C6F47E
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=428,309 Selected=0x553E127E
+  DockNode    ID=0x00000004 Parent=0x21C5FBB2 SizeRef=899,581 CentralNode=1
 
