--- a/imgui.ini
+++ b/imgui.ini
@@ -1,34 +1,35 @@
 [Window][DockSpace]
 Pos=0,0
-Size=1200,600
+Size=1400,800
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=340,75
+Pos=394,41
 Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=0,19
-Size=300,581
+Pos=0,581
+Size=390,219
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene Control]
 Pos=0,19
-Size=300,271
+Size=390,561
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Viewport]
-Pos=455,126
-Size=578,363
+Pos=391,19
+Size=1009,781
 Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace     ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,19 Size=1200,581 Split=X
-  DockNode    ID=0x00000003 Parent=0x21C5FBB2 SizeRef=300,581 Split=Y Selected=0x553E127E
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=428,271 Selected=0xB5C6F47E
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=428,309 Selected=0x553E127E
-  DockNode    ID=0x00000004 Parent=0x21C5FBB2 SizeRef=899,581 CentralNode=1
+DockSpace     ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,19 Size=1400,781 Split=X
+  DockNode    ID=0x00000003 Parent=0x21C5FBB2 SizeRef=390,581 Split=Y Selected=0xB5C6F47E
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=346,417 Selected=0xB5C6F47E
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=346,163 Selected=0x553E127E
+  DockNode    ID=0x00000004 Parent=0x21C5FBB2 SizeRef=1009,581 CentralNode=1 Selected=0xC450F867
 
