--- a/imgui.ini
+++ b/imgui.ini
@@ -9,27 +9,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=0,581
-Size=390,219
+Pos=0,638
+Size=415,162
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene Control]
 Pos=0,19
-Size=390,561
+Size=415,618
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][Viewport]
-Pos=391,19
-Size=1009,781
+Pos=416,19
+Size=984,781
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
 DockSpace     ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,19 Size=1400,781 Split=X
-  DockNode    ID=0x00000003 Parent=0x21C5FBB2 SizeRef=390,581 Split=Y Selected=0xB5C6F47E
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=346,417 Selected=0xB5C6F47E
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=346,163 Selected=0x553E127E
-  DockNode    ID=0x00000004 Parent=0x21C5FBB2 SizeRef=1009,581 CentralNode=1 Selected=0xC450F867
+  DockNode    ID=0x00000003 Parent=0x21C5FBB2 SizeRef=415,581 Split=Y Selected=0x553E127E
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=415,618 Selected=0xB5C6F47E
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=415,162 Selected=0x553E127E
+  DockNode    ID=0x00000004 Parent=0x21C5FBB2 SizeRef=984,581 CentralNode=1 Selected=0xC450F867
 
