Update build type strings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,10 @@ elseif(UNIX)
     add_definitions(-DPLATFORM_LINUX)
 endif()
 
-if(CMAKE_BUILD_TYPE MATCHES Debug)
+if(CMAKE_BUILD_TYPE MATCHES DEBUG)
     add_compile_options(-g -O0 -fsanitize=address -fno-omit-frame-pointer)
     add_link_options(-fsanitize=address)
-elseif(CMAKE_BUILD_TYPE MATCHES Release)
+elseif(CMAKE_BUILD_TYPE MATCHES RELEASE)
     add_compile_options(-O3 -march=native)
     add_compile_definitions(PRIVATE NODEBUG=1)
 elseif(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
