Limit address sanitizer to Unix/Mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,13 +23,14 @@ elseif(UNIX)
 endif()
 
 if(CMAKE_BUILD_TYPE MATCHES DEBUG)
-    add_compile_options(-g -O0 -fsanitize=address -fno-omit-frame-pointer)
-    add_link_options(-fsanitize=address)
-elseif(CMAKE_BUILD_TYPE MATCHES RELEASE)
+    add_compile_options(-g -O0 -fno-omit-frame-pointer)
+    if(!WIN32)
+        add_compile_options(-fsanitize=address)
+        add_link_options(-fsanitize=address)
+    endif()
+else()
     add_compile_options(-O3 -march=native)
     add_compile_definitions(PRIVATE NODEBUG=1)
-elseif(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
-    add_compile_options(-O2 -g)
 endif()
 
 find_package(Vulkan REQUIRED)
