Small windows-dependent fixes

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,32 +4,32 @@ Size=1400,800
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=463,199
+Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Statistics]
-Pos=0,635
-Size=415,165
+[Window][Scene Control]
+Pos=0,22
+Size=288,606
 Collapsed=0
 DockId=0x00000005,0
 
-[Window][Scene Control]
-Pos=0,22
-Size=415,612
+[Window][Statistics]
+Pos=0,629
+Size=288,171
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=416,22
-Size=984,778
+Pos=289,22
+Size=1111,778
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
 DockSpace     ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=1400,778 Split=X
-  DockNode    ID=0x00000003 Parent=0x21C5FBB2 SizeRef=415,581 Split=Y Selected=0x553E127E
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=415,610 Selected=0xB5C6F47E
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=415,165 Selected=0x553E127E
-  DockNode    ID=0x00000004 Parent=0x21C5FBB2 SizeRef=984,581 CentralNode=1 Selected=0xC450F867
+  DockNode    ID=0x00000003 Parent=0x21C5FBB2 SizeRef=288,778 Split=Y Selected=0xB5C6F47E
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=288,606 Selected=0xB5C6F47E
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=288,171 Selected=0x553E127E
+  DockNode    ID=0x00000004 Parent=0x21C5FBB2 SizeRef=1111,778 CentralNode=1 Selected=0xC450F867
 
