--- a/assets/scenes/CornellBox.yaml
+++ b/assets/scenes/CornellBox.yaml
@@ -4,35 +4,35 @@ Objects:
         Color: [1, 1, 1]
         EmissionColor: [1, 1, 1]
         EmissionStrength: 0
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/quad.glb
+      File: ../models/quad.glb
       Transform: [0, 1.20000005, 0, -180, 0, 0, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
         Color: [1, 0, 0]
         EmissionColor: [1, 1, 1]
         EmissionStrength: 0
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/quad.glb
+      File: ../models/quad.glb
       Transform: [-1.20000005, 0, 0, 0, 0, -90, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
         Color: [1, 1, 1]
         EmissionColor: [1, 1, 1]
         EmissionStrength: 0
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/quad.glb
+      File: ../models/quad.glb
       Transform: [0, 0, 1.20000005, -90, 0, 0, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
         Color: [0, 0, 0]
         EmissionColor: [1, 1, 1]
         EmissionStrength: 0.579999983
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/quad.glb
+      File: ../models/quad.glb
       Transform: [0, -1.20000005, 0, 0, 0, 0, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
         Color: [0, 1, 0]
         EmissionColor: [1, 1, 1]
         EmissionStrength: 0
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/quad.glb
+      File: ../models/quad.glb
       Transform: [1.20000005, 0, 0, 0, 0, 90, 1.20000005, 1.20000005, 1.20000005]
   - Sphere:
       Center: [0, 0, -1]
