Apply Release default build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
+    set(CMAKE_BUILD_TYPE RELEASE CACHE STRING "Build type" FORCE)
 endif()
 
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
@@ -28,7 +28,7 @@ if(CMAKE_BUILD_TYPE MATCHES DEBUG)
         add_compile_options(-fsanitize=address)
         add_link_options(-fsanitize=address)
     endif()
-else()
+else(CMAKE_BUILD_TYPE MATCHES RELEASE)
     add_compile_options(-O3 -march=native)
     add_compile_definitions(PRIVATE NODEBUG=1)
 endif()
