--- a/assets/scenes/OutdoorSphere.yaml
+++ b/assets/scenes/OutdoorSphere.yaml
@@ -8,22 +8,12 @@ Camera:
   Defocus: 0
   Diverge: 1
   Exposure: 1
-  EnvRotation: 75.5
+  EnvRotation: 0
 EnvTexture: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/hdri/spruit_sunrise_4k.hdr
 Objects:
-  - Mesh:
-      Material:
-        Color: [1, 1, 1]
-        EmissionColor: [1, 1, 1]
-        EmissionStrength: 0
-        SpecularColor: [1, 1, 1]
-        SpecularFactor: 0
-        Roughness: 1
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/870k_dragon.glb
-      Transform: [0.75999999, 0, 0, 0, -48, 180, 3, 3, 3]
   - Sphere:
-      Center: [-1.13, -0.239999995, 0]
-      Radius: 0.620000005
+      Center: [0, 0, 0]
+      Radius: 0.850000024
       Material:
         Color: [1, 1, 1]
         EmissionColor: [1, 1, 1]
