--- a/assets/scenes/OutdoorDragon.yaml
+++ b/assets/scenes/OutdoorDragon.yaml
@@ -7,8 +7,8 @@ Camera:
   MaxBounces: 8
   Defocus: 0
   Diverge: 1
-  Exposure: 1
-  EnvRotation: 75.5
+  Exposure: 1.20000005
+  EnvRotation: 75
 EnvTexture: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/hdri/spruit_sunrise_4k.hdr
 Objects:
   - Mesh:
@@ -20,9 +20,9 @@ Objects:
         SpecularFactor: 0
         Roughness: 1
       File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/870k_dragon.glb
-      Transform: [0.75999999, 0, 0, 0, -48, 180, 3, 3, 3]
+      Transform: [0.75999999, 0.150000006, 0, 0, -48, 180, 3, 3, 3]
   - Sphere:
-      Center: [-1.13, -0.239999995, 0]
+      Center: [-1.05999994, 0, 0]
       Radius: 0.620000005
       Material:
         Color: [1, 1, 1]
