--- a/assets/scenes/CornellBoxDragon.yaml
+++ b/assets/scenes/CornellBoxDragon.yaml
@@ -1,12 +1,14 @@
 Camera:
-  LookFrom: [0, 0, 0]
-  LookAt: [0, 0, 0]
-  VFOV: 0
+  LookFrom: [0, 0.0299999993, -4.5]
+  LookAt: [0, 0.0299999993, 0]
+  VFOV: 40.9000015
   FocalDistance: 5.73999977
   SamplesPerPixel: 1
   MaxBounces: 8
-  Defocus: 76
+  Defocus: 0
   Diverge: 1
+  Exposure: 1
+  EnvRotation: 0
 Objects:
   - Mesh:
       Material:
@@ -16,7 +18,7 @@ Objects:
         SpecularColor: [1, 1, 1]
         SpecularFactor: 0
         Roughness: 1
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/scenes/../models/quad.glb
+      File: ../models/quad.glb
       Transform: [0, 1.20000005, 0, -180, 0, 0, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
@@ -26,7 +28,7 @@ Objects:
         SpecularColor: [1, 1, 1]
         SpecularFactor: 0
         Roughness: 1
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/scenes/../models/quad.glb
+      File: ../models/quad.glb
       Transform: [-1.20000005, 0, 0, 0, 0, -90, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
@@ -36,7 +38,7 @@ Objects:
         SpecularColor: [1, 1, 1]
         SpecularFactor: 0
         Roughness: 1
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/scenes/../models/quad.glb
+      File: ../models/quad.glb
       Transform: [0, 0, 1.20000005, -90, 0, 0, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
@@ -46,7 +48,7 @@ Objects:
         SpecularColor: [1, 1, 1]
         SpecularFactor: 0
         Roughness: 1
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/scenes/../models/quad.glb
+      File: ../models/quad.glb
       Transform: [0, -1.20000005, 0, 0, 0, 0, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
@@ -56,18 +58,8 @@ Objects:
         SpecularColor: [1, 1, 1]
         SpecularFactor: 0
         Roughness: 1
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/scenes/../models/quad.glb
+      File: ../models/quad.glb
       Transform: [1.20000005, 0, 0, 0, 0, 90, 1.20000005, 1.20000005, 1.20000005]
-  - Mesh:
-      Material:
-        Color: [1, 1, 1]
-        EmissionColor: [1, 1, 1]
-        EmissionStrength: 0
-        SpecularColor: [1, 1, 1]
-        SpecularFactor: 0
-        Roughness: 1
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/scenes/../models/quad.glb
-      Transform: [0, 0, -1.20000005, 90, 0, 0, 1.20000005, 1.20000005, 1.20000005]
   - Mesh:
       Material:
         Color: [1, 1, 1]
@@ -76,15 +68,15 @@ Objects:
         SpecularColor: [1, 1, 1]
         SpecularFactor: 0
         Roughness: 1
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/quad.glb
-      Transform: [0, -1.19000006, 0, 0, 0, 0, 0.5, 0.5, 0.5]
+      File: ../models/quad.glb
+      Transform: [0, 1.19000006, 0, 0, 0, 0, 0.5, 0.5, 0.5]
   - Mesh:
       Material:
-        Color: [0.227848113, 0.227848113, 0.227848113]
+        Color: [0.518987298, 0.518987298, 0.518987298]
         EmissionColor: [1, 1, 1]
         EmissionStrength: 0
         SpecularColor: [1, 1, 1]
         SpecularFactor: 0.100000001
         Roughness: 0.0199999996
-      File: /Users/tyler/Documents/graphics/vulkan-pathtracer/assets/models/870k_dragon.glb
-      Transform: [-0.0500000007, 0.540000021, 0.109999999, 0, -54.5, 180, 2.4000001, 2.4000001, 2.4000001]
+      File: ../models/870k_dragon.glb
+      Transform: [0.0799999982, -0.579999983, 0.0799999982, 0, -51.5, 0, 2.4000001, 2.4000001, 2.4000001]
