--- a/imgui.ini
+++ b/imgui.ini
@@ -12,40 +12,40 @@ Collapsed=0
 Pos=0,22
 Size=295,611
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Window][Statistics]
-Pos=0,642
-Size=383,158
+Pos=972,654
+Size=428,146
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Viewport]
-Pos=384,22
-Size=1016,778
+Pos=0,22
+Size=971,778
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Camera]
-Pos=0,22
-Size=383,315
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Objects]
-Pos=0,338
-Size=383,303
+Pos=972,22
+Size=428,226
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Objects]
+Pos=972,249
+Size=428,404
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace         ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=1400,778 Split=X
-  DockNode        ID=0x00000003 Parent=0x21C5FBB2 SizeRef=383,778 Split=Y Selected=0xB5C6F47E
-    DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=288,606 Selected=0xB5C6F47E
-    DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=288,171 Split=Y Selected=0x553E127E
-      DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=357,619 Split=Y Selected=0xAA49D574
-        DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=357,315 Selected=0xAA49D574
-        DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=357,303 Selected=0x031DC75C
-      DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=357,158 Selected=0x553E127E
-  DockNode        ID=0x00000004 Parent=0x21C5FBB2 SizeRef=1016,778 CentralNode=1 Selected=0xC450F867
+DockSpace       ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=1400,778 Split=X
+  DockNode      ID=0x00000001 Parent=0x21C5FBB2 SizeRef=971,778 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=376,778 Selected=0xB5C6F47E
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1023,778 CentralNode=1 HiddenTabBar=1 Selected=0xC450F867
+  DockNode      ID=0x00000009 Parent=0x21C5FBB2 SizeRef=428,778 Split=Y Selected=0x031DC75C
+    DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=376,226 Selected=0xAA49D574
+    DockNode    ID=0x00000008 Parent=0x00000009 SizeRef=376,551 Split=Y Selected=0x031DC75C
+      DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=376,404 Selected=0x031DC75C
+      DockNode  ID=0x00000007 Parent=0x00000008 SizeRef=376,146 Selected=0x553E127E
 
