--- a/imgui.ini
+++ b/imgui.ini
@@ -8,44 +8,36 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Scene Control]
-Pos=0,22
-Size=295,611
+[Window][Camera]
+Pos=979,22
+Size=421,227
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Objects]
+Pos=979,250
+Size=421,365
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Statistics]
+Pos=979,616
+Size=421,184
 Collapsed=0
 DockId=0x00000003,0
 
-[Window][Statistics]
-Pos=972,654
-Size=428,146
-Collapsed=0
-DockId=0x00000007,0
-
 [Window][Viewport]
 Pos=0,22
-Size=971,778
+Size=978,778
 Collapsed=0
-DockId=0x00000004,0
-
-[Window][Camera]
-Pos=972,22
-Size=428,226
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Objects]
-Pos=972,249
-Size=428,404
-Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000004
 
 [Docking][Data]
 DockSpace       ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=1400,778 Split=X
-  DockNode      ID=0x00000001 Parent=0x21C5FBB2 SizeRef=971,778 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=376,778 Selected=0xB5C6F47E
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1023,778 CentralNode=1 HiddenTabBar=1 Selected=0xC450F867
-  DockNode      ID=0x00000009 Parent=0x21C5FBB2 SizeRef=428,778 Split=Y Selected=0x031DC75C
-    DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=376,226 Selected=0xAA49D574
-    DockNode    ID=0x00000008 Parent=0x00000009 SizeRef=376,551 Split=Y Selected=0x031DC75C
-      DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=376,404 Selected=0x031DC75C
-      DockNode  ID=0x00000007 Parent=0x00000008 SizeRef=376,146 Selected=0x553E127E
+  DockNode      ID=0x00000004 Parent=0x21C5FBB2 SizeRef=978,778 CentralNode=1 Selected=0xC450F867
+  DockNode      ID=0x00000005 Parent=0x21C5FBB2 SizeRef=421,778 Split=Y Selected=0x031DC75C
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=421,593 Split=Y Selected=0xAA49D574
+      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=421,227 Selected=0xAA49D574
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=421,365 Selected=0x031DC75C
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=421,184 Selected=0x553E127E
 
