--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-Size=1400,800
+Size=2752,1152
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,35 +9,75 @@ Size=400,400
 Collapsed=0
 
 [Window][Camera]
-Pos=979,22
-Size=421,227
+Pos=2352,22
+Size=400,324
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000008,1
 
 [Window][Objects]
 Pos=979,250
 Size=421,365
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000005,0
 
 [Window][Statistics]
-Pos=979,616
-Size=421,184
+Pos=2352,969
+Size=400,183
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Viewport]
 Pos=0,22
-Size=978,778
+Size=2351,1130
 Collapsed=0
 DockId=0x00000004
 
+[Window][Scene]
+Pos=2352,22
+Size=400,324
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Material]
+Pos=2352,576
+Size=400,392
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Dear ImGui Demo]
+Pos=1143,180
+Size=550,680
+Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_478B81A3]
+IsChild=1
+Size=499,128
+
+[Window][Dear ImGui Demo/Red_BEEF922B]
+IsChild=1
+Size=200,100
+
+[Window][Delete?]
+Pos=1244,519
+Size=264,114
+Collapsed=0
+
+[Window][Object]
+Pos=2352,347
+Size=400,228
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace       ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=1400,778 Split=X
-  DockNode      ID=0x00000004 Parent=0x21C5FBB2 SizeRef=978,778 CentralNode=1 Selected=0xC450F867
-  DockNode      ID=0x00000005 Parent=0x21C5FBB2 SizeRef=421,778 Split=Y Selected=0x031DC75C
-    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=421,593 Split=Y Selected=0xAA49D574
-      DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=421,227 Selected=0xAA49D574
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=421,365 Selected=0x031DC75C
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=421,184 Selected=0x553E127E
+DockSpace         ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=2752,1130 Split=X
+  DockNode        ID=0x00000003 Parent=0x21C5FBB2 SizeRef=1395,1062 Split=X
+    DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=713,778 CentralNode=1 Selected=0xC450F867
+    DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=320,778 Selected=0x031DC75C
+  DockNode        ID=0x00000006 Parent=0x21C5FBB2 SizeRef=400,1062 Split=Y Selected=0xE601B12F
+    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=400,889 Split=Y Selected=0xE601B12F
+      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=400,304 Selected=0xE601B12F
+      DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=400,584 Split=Y Selected=0x5442A938
+        DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=400,214 Selected=0x5442A938
+        DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=400,369 Selected=0x2BA5FD37
+    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=400,172 Selected=0x553E127E
 
