--- a/imgui.ini
+++ b/imgui.ini
@@ -4,13 +4,13 @@ Size=2752,1152
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=800,86
+Size=972,826
 Collapsed=0
 
 [Window][Camera]
-Pos=2352,22
-Size=400,324
+Pos=2376,22
+Size=376,443
 Collapsed=0
 DockId=0x00000008,1
 
@@ -21,28 +21,28 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Statistics]
-Pos=2352,969
-Size=400,183
+Pos=2376,1001
+Size=376,151
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000B,0
 
 [Window][Viewport]
 Pos=0,22
-Size=2351,1130
+Size=2375,1130
 Collapsed=0
 DockId=0x00000004
 
 [Window][Scene]
-Pos=2352,22
-Size=400,324
+Pos=2376,22
+Size=376,443
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Material]
-Pos=2352,576
-Size=400,392
+Pos=2376,695
+Size=376,305
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
 Pos=1143,180
@@ -63,21 +63,21 @@ Size=264,114
 Collapsed=0
 
 [Window][Object]
-Pos=2352,347
-Size=400,228
+Pos=2376,466
+Size=376,228
 Collapsed=0
 DockId=0x00000001,0
 
 [Docking][Data]
 DockSpace         ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=2752,1130 Split=X
-  DockNode        ID=0x00000003 Parent=0x21C5FBB2 SizeRef=1395,1062 Split=X
+  DockNode        ID=0x00000003 Parent=0x21C5FBB2 SizeRef=2375,1062 Split=X
     DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=713,778 CentralNode=1 Selected=0xC450F867
     DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=320,778 Selected=0x031DC75C
-  DockNode        ID=0x00000006 Parent=0x21C5FBB2 SizeRef=400,1062 Split=Y Selected=0xE601B12F
-    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=400,889 Split=Y Selected=0xE601B12F
-      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=400,304 Selected=0xE601B12F
-      DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=400,584 Split=Y Selected=0x5442A938
-        DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=400,214 Selected=0x5442A938
-        DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=400,369 Selected=0x2BA5FD37
-    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=400,172 Selected=0x553E127E
+  DockNode        ID=0x00000006 Parent=0x21C5FBB2 SizeRef=376,1062 Split=Y Selected=0xE601B12F
+    DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=400,443 Selected=0xE601B12F
+    DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=400,686 Split=Y Selected=0x5442A938
+      DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=400,228 Selected=0x5442A938
+      DockNode    ID=0x0000000A Parent=0x00000009 SizeRef=400,457 Split=Y Selected=0x2BA5FD37
+        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=376,305 Selected=0x2BA5FD37
+        DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=376,151 Selected=0x553E127E
 
