Adjust default visuals

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,83 +1,57 @@
 [Window][DockSpace]
 Pos=0,0
-Size=2752,1152
+Size=3440,1324
 Collapsed=0
 
+[Window][Statistics]
+Pos=3081,1113
+Size=359,211
+Collapsed=0
+DockId=0x00000004,0
+
 [Window][Debug##Default]
-Pos=800,86
-Size=972,826
+Pos=60,60
+Size=400,400
 Collapsed=0
 
 [Window][Camera]
-Pos=2376,22
-Size=376,443
+Pos=3081,22
+Size=359,360
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000005,1
 
-[Window][Objects]
-Pos=979,250
-Size=421,365
+[Window][Scene]
+Pos=3081,22
+Size=359,360
 Collapsed=0
 DockId=0x00000005,0
 
-[Window][Statistics]
-Pos=2376,1001
-Size=376,151
-Collapsed=0
-DockId=0x0000000B,0
-
 [Window][Viewport]
 Pos=0,22
-Size=2375,1130
+Size=3080,1302
 Collapsed=0
-DockId=0x00000004
+DockId=0x00000001
 
-[Window][Scene]
-Pos=2376,22
-Size=376,443
+[Window][Material]
+Pos=3081,717
+Size=359,395
 Collapsed=0
 DockId=0x00000008,0
 
-[Window][Material]
-Pos=2376,695
-Size=376,305
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Dear ImGui Demo]
-Pos=1143,180
-Size=550,680
-Collapsed=0
-
-[Window][Dear ImGui Demo/ResizableChild_478B81A3]
-IsChild=1
-Size=499,128
-
-[Window][Dear ImGui Demo/Red_BEEF922B]
-IsChild=1
-Size=200,100
-
-[Window][Delete?]
-Pos=1244,519
-Size=264,114
-Collapsed=0
-
 [Window][Object]
-Pos=2376,466
-Size=376,228
+Pos=3081,383
+Size=359,333
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,0
 
 [Docking][Data]
-DockSpace         ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=2752,1130 Split=X
-  DockNode        ID=0x00000003 Parent=0x21C5FBB2 SizeRef=2375,1062 Split=X
-    DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=713,778 CentralNode=1 Selected=0xC450F867
-    DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=320,778 Selected=0x031DC75C
-  DockNode        ID=0x00000006 Parent=0x21C5FBB2 SizeRef=376,1062 Split=Y Selected=0xE601B12F
-    DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=400,443 Selected=0xE601B12F
-    DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=400,686 Split=Y Selected=0x5442A938
-      DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=400,228 Selected=0x5442A938
-      DockNode    ID=0x0000000A Parent=0x00000009 SizeRef=400,457 Split=Y Selected=0x2BA5FD37
-        DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=376,305 Selected=0x2BA5FD37
-        DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=376,151 Selected=0x553E127E
+DockSpace         ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=3440,1302 Split=X
+  DockNode        ID=0x00000001 Parent=0x21C5FBB2 SizeRef=2392,1130 CentralNode=1 Selected=0xC450F867
+  DockNode        ID=0x00000002 Parent=0x21C5FBB2 SizeRef=359,1130 Split=Y Selected=0x553E127E
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=359,749 Split=Y Selected=0xE601B12F
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=359,247 Selected=0xE601B12F
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=359,501 Split=Y Selected=0x5442A938
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=359,229 Selected=0x5442A938
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=359,271 Selected=0x2BA5FD37
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=359,145 Selected=0x553E127E
 
