--- a/imgui.ini
+++ b/imgui.ini
@@ -1,11 +1,11 @@
 [Window][DockSpace]
 Pos=0,0
-Size=3440,1324
+Size=2752,1152
 Collapsed=0
 
 [Window][Statistics]
-Pos=3081,1113
-Size=359,211
+Pos=2393,978
+Size=359,174
 Collapsed=0
 DockId=0x00000004,0
 
@@ -15,43 +15,59 @@ Size=400,400
 Collapsed=0
 
 [Window][Camera]
-Pos=3081,22
-Size=359,360
+Pos=2393,22
+Size=359,312
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Scene]
-Pos=3081,22
-Size=359,360
+Pos=2393,22
+Size=359,312
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
 Pos=0,22
-Size=3080,1302
+Size=2392,1130
 Collapsed=0
 DockId=0x00000001
 
 [Window][Material]
-Pos=3081,717
-Size=359,395
+Pos=2393,609
+Size=359,368
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Object]
-Pos=3081,383
-Size=359,333
+Pos=2393,335
+Size=359,280
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000B,0
+
+[Window][Material 0]
+Pos=2393,669
+Size=359,308
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Material ]
+Pos=2393,616
+Size=359,361
+Collapsed=0
+DockId=0x0000000C,0
 
 [Docking][Data]
-DockSpace         ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=3440,1302 Split=X
-  DockNode        ID=0x00000001 Parent=0x21C5FBB2 SizeRef=2392,1130 CentralNode=1 Selected=0xC450F867
-  DockNode        ID=0x00000002 Parent=0x21C5FBB2 SizeRef=359,1130 Split=Y Selected=0x553E127E
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=359,749 Split=Y Selected=0xE601B12F
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=359,247 Selected=0xE601B12F
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=359,501 Split=Y Selected=0x5442A938
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=359,229 Selected=0x5442A938
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=359,271 Selected=0x2BA5FD37
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=359,145 Selected=0x553E127E
+DockSpace             ID=0x21C5FBB2 Window=0x3DA2F1DE Pos=0,22 Size=2752,1130 Split=X
+  DockNode            ID=0x00000001 Parent=0x21C5FBB2 SizeRef=2392,1130 CentralNode=1 Selected=0xC450F867
+  DockNode            ID=0x00000002 Parent=0x21C5FBB2 SizeRef=359,1130 Split=Y Selected=0x553E127E
+    DockNode          ID=0x00000003 Parent=0x00000002 SizeRef=359,955 Split=Y Selected=0xE601B12F
+      DockNode        ID=0x00000005 Parent=0x00000003 SizeRef=359,312 Selected=0xE601B12F
+      DockNode        ID=0x00000006 Parent=0x00000003 SizeRef=359,642 Split=Y Selected=0x5442A938
+        DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=359,273 Split=Y Selected=0x5442A938
+          DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=359,333 Split=Y Selected=0x5442A938
+            DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=359,280 Selected=0x5442A938
+            DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=359,361 Selected=0xAD31A7A5
+          DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=359,308 Selected=0x5106DECC
+        DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=359,368 Selected=0x2BA5FD37
+    DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=359,174 Selected=0x553E127E
 
