Build debug by default, match capital/lower first letter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE RELEASE CACHE STRING "Build type" FORCE)
+    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
 endif()
 
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
@@ -22,13 +22,13 @@ elseif(UNIX)
     add_definitions(-DPLATFORM_LINUX)
 endif()
 
-if(CMAKE_BUILD_TYPE MATCHES DEBUG)
-    add_compile_options(-g -O0 -fno-omit-frame-pointer)
+if(CMAKE_BUILD_TYPE MATCHES "[Dd]ebug")
+    add_compile_options(-g -fno-omit-frame-pointer)
     if(NOT WIN32)
         add_compile_options(-fsanitize=address)
         add_link_options(-fsanitize=address)
     endif()
-else(CMAKE_BUILD_TYPE MATCHES RELEASE)
+elseif(CMAKE_BUILD_TYPE MATCHES "[Rr]elease")
     add_compile_options(-O3 -march=native)
     add_compile_definitions(PRIVATE NODEBUG=1)
 endif()
